feat(server): implement add user to family logic, handleerrors
