# server/gapi/converter.go
@@ -1,21 +1,31 @@
 package gapi
 
 import (
+	"log"
+
 	db "github.com/Remxin/home-life/server/db/sqlc"
 	"github.com/Remxin/home-life/server/pb"
+	"google.golang.org/protobuf/encoding/protojson"
 	"google.golang.org/protobuf/types/known/timestamppb"
 )
 
 // import
 
 func convertUser(user db.User) *pb.User {
-	return &pb.User{
+
+	userProto := &pb.User{
 		Id:                user.ID.String(),
 		Name:              user.FullName,
 		Email:             user.Email,
+		FamilyId:          user.FamilyID.UUID.String(),
 		PasswordChangedAt: timestamppb.New(user.PasswordChangedAt),
 		CreatedAt:         timestamppb.New(user.CreatedAt),
 	}
+
+	jsonString := protojson.Format(userProto)
+	log.Printf("User Protobuf JSON: %s", jsonString)
+
+	return userProto
 }
 
 func convertFamily(family db.Family) *pb.Family {
@@ -24,5 +34,15 @@ func convertFamily(family db.Family) *pb.Family {
 		Name:      family.Name,
 		OwnerId:   family.OwnerID.String(),
 		CreatedAt: timestamppb.New(family.CreatedAt),
+	}
+}
+
+func convertPermission(permission db.Permission) *pb.Permissions {
+	return &pb.Permissions{
+		Id:        permission.ID.String(),
+		CanRead:   permission.CanRead,
+		CanEdit:   permission.CanEdit,
+		CanCreate: permission.CanCreate,
+		CanModify: permission.CanModify,
 	}
 }
