# server/pb/rpc_add_to_family.pb.go
@@ -1,276 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.34.2
-// 	protoc        v5.27.1
-// source: rpc_add_to_family.proto
-
-package pb
-
-import (
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	reflect "reflect"
-	sync "sync"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-type AddToFamilyRequest struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	FamilyId  string `protobuf:"bytes,1,opt,name=family_id,json=familyId,proto3" json:"family_id,omitempty"`
-	UserId    string `protobuf:"bytes,2,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`
-	CanRead   bool   `protobuf:"varint,3,opt,name=can_read,json=canRead,proto3" json:"can_read,omitempty"`
-	CanEdit   bool   `protobuf:"varint,4,opt,name=can_edit,json=canEdit,proto3" json:"can_edit,omitempty"`
-	CanCreate bool   `protobuf:"varint,5,opt,name=can_create,json=canCreate,proto3" json:"can_create,omitempty"`
-	CanModify bool   `protobuf:"varint,6,opt,name=can_modify,json=canModify,proto3" json:"can_modify,omitempty"`
-}
-
-func (x *AddToFamilyRequest) Reset() {
-	*x = AddToFamilyRequest{}
-	if protoimpl.UnsafeEnabled {
-		mi := &file_rpc_add_to_family_proto_msgTypes[0]
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		ms.StoreMessageInfo(mi)
-	}
-}
-
-func (x *AddToFamilyRequest) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*AddToFamilyRequest) ProtoMessage() {}
-
-func (x *AddToFamilyRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_rpc_add_to_family_proto_msgTypes[0]
-	if protoimpl.UnsafeEnabled && x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use AddToFamilyRequest.ProtoReflect.Descriptor instead.
-func (*AddToFamilyRequest) Descriptor() ([]byte, []int) {
-	return file_rpc_add_to_family_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *AddToFamilyRequest) GetFamilyId() string {
-	if x != nil {
-		return x.FamilyId
-	}
-	return ""
-}
-
-func (x *AddToFamilyRequest) GetUserId() string {
-	if x != nil {
-		return x.UserId
-	}
-	return ""
-}
-
-func (x *AddToFamilyRequest) GetCanRead() bool {
-	if x != nil {
-		return x.CanRead
-	}
-	return false
-}
-
-func (x *AddToFamilyRequest) GetCanEdit() bool {
-	if x != nil {
-		return x.CanEdit
-	}
-	return false
-}
-
-func (x *AddToFamilyRequest) GetCanCreate() bool {
-	if x != nil {
-		return x.CanCreate
-	}
-	return false
-}
-
-func (x *AddToFamilyRequest) GetCanModify() bool {
-	if x != nil {
-		return x.CanModify
-	}
-	return false
-}
-
-type AddToFamilyResponse struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	User        *User        `protobuf:"bytes,1,opt,name=user,proto3" json:"user,omitempty"`
-	Permissions *Permissions `protobuf:"bytes,2,opt,name=permissions,proto3" json:"permissions,omitempty"`
-}
-
-func (x *AddToFamilyResponse) Reset() {
-	*x = AddToFamilyResponse{}
-	if protoimpl.UnsafeEnabled {
-		mi := &file_rpc_add_to_family_proto_msgTypes[1]
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		ms.StoreMessageInfo(mi)
-	}
-}
-
-func (x *AddToFamilyResponse) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*AddToFamilyResponse) ProtoMessage() {}
-
-func (x *AddToFamilyResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_rpc_add_to_family_proto_msgTypes[1]
-	if protoimpl.UnsafeEnabled && x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use AddToFamilyResponse.ProtoReflect.Descriptor instead.
-func (*AddToFamilyResponse) Descriptor() ([]byte, []int) {
-	return file_rpc_add_to_family_proto_rawDescGZIP(), []int{1}
-}
-
-func (x *AddToFamilyResponse) GetUser() *User {
-	if x != nil {
-		return x.User
-	}
-	return nil
-}
-
-func (x *AddToFamilyResponse) GetPermissions() *Permissions {
-	if x != nil {
-		return x.Permissions
-	}
-	return nil
-}
-
-var File_rpc_add_to_family_proto protoreflect.FileDescriptor
-
-var file_rpc_add_to_family_proto_rawDesc = []byte{
-	0x0a, 0x17, 0x72, 0x70, 0x63, 0x5f, 0x61, 0x64, 0x64, 0x5f, 0x74, 0x6f, 0x5f, 0x66, 0x61, 0x6d,
-	0x69, 0x6c, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x02, 0x70, 0x62, 0x1a, 0x0a, 0x75,
-	0x73, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x11, 0x70, 0x65, 0x72, 0x6d, 0x69,
-	0x73, 0x73, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xbe, 0x01, 0x0a,
-	0x12, 0x41, 0x64, 0x64, 0x54, 0x6f, 0x46, 0x61, 0x6d, 0x69, 0x6c, 0x79, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x12, 0x1b, 0x0a, 0x09, 0x66, 0x61, 0x6d, 0x69, 0x6c, 0x79, 0x5f, 0x69, 0x64,
-	0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x66, 0x61, 0x6d, 0x69, 0x6c, 0x79, 0x49, 0x64,
-	0x12, 0x17, 0x0a, 0x07, 0x75, 0x73, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28,
-	0x09, 0x52, 0x06, 0x75, 0x73, 0x65, 0x72, 0x49, 0x64, 0x12, 0x19, 0x0a, 0x08, 0x63, 0x61, 0x6e,
-	0x5f, 0x72, 0x65, 0x61, 0x64, 0x18, 0x03, 0x20, 0x01, 0x28, 0x08, 0x52, 0x07, 0x63, 0x61, 0x6e,
-	0x52, 0x65, 0x61, 0x64, 0x12, 0x19, 0x0a, 0x08, 0x63, 0x61, 0x6e, 0x5f, 0x65, 0x64, 0x69, 0x74,
-	0x18, 0x04, 0x20, 0x01, 0x28, 0x08, 0x52, 0x07, 0x63, 0x61, 0x6e, 0x45, 0x64, 0x69, 0x74, 0x12,
-	0x1d, 0x0a, 0x0a, 0x63, 0x61, 0x6e, 0x5f, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x18, 0x05, 0x20,
-	0x01, 0x28, 0x08, 0x52, 0x09, 0x63, 0x61, 0x6e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x12, 0x1d,
-	0x0a, 0x0a, 0x63, 0x61, 0x6e, 0x5f, 0x6d, 0x6f, 0x64, 0x69, 0x66, 0x79, 0x18, 0x06, 0x20, 0x01,
-	0x28, 0x08, 0x52, 0x09, 0x63, 0x61, 0x6e, 0x4d, 0x6f, 0x64, 0x69, 0x66, 0x79, 0x22, 0x66, 0x0a,
-	0x13, 0x41, 0x64, 0x64, 0x54, 0x6f, 0x46, 0x61, 0x6d, 0x69, 0x6c, 0x79, 0x52, 0x65, 0x73, 0x70,
-	0x6f, 0x6e, 0x73, 0x65, 0x12, 0x1c, 0x0a, 0x04, 0x75, 0x73, 0x65, 0x72, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x0b, 0x32, 0x08, 0x2e, 0x70, 0x62, 0x2e, 0x55, 0x73, 0x65, 0x72, 0x52, 0x04, 0x75, 0x73,
-	0x65, 0x72, 0x12, 0x31, 0x0a, 0x0b, 0x70, 0x65, 0x72, 0x6d, 0x69, 0x73, 0x73, 0x69, 0x6f, 0x6e,
-	0x73, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0f, 0x2e, 0x70, 0x62, 0x2e, 0x50, 0x65, 0x72,
-	0x6d, 0x69, 0x73, 0x73, 0x69, 0x6f, 0x6e, 0x73, 0x52, 0x0b, 0x70, 0x65, 0x72, 0x6d, 0x69, 0x73,
-	0x73, 0x69, 0x6f, 0x6e, 0x73, 0x42, 0x27, 0x5a, 0x25, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e,
-	0x63, 0x6f, 0x6d, 0x2f, 0x52, 0x65, 0x6d, 0x78, 0x69, 0x6e, 0x2f, 0x68, 0x6f, 0x6d, 0x65, 0x2d,
-	0x6c, 0x69, 0x66, 0x65, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f, 0x70, 0x62, 0x62, 0x06,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
-}
-
-var (
-	file_rpc_add_to_family_proto_rawDescOnce sync.Once
-	file_rpc_add_to_family_proto_rawDescData = file_rpc_add_to_family_proto_rawDesc
-)
-
-func file_rpc_add_to_family_proto_rawDescGZIP() []byte {
-	file_rpc_add_to_family_proto_rawDescOnce.Do(func() {
-		file_rpc_add_to_family_proto_rawDescData = protoimpl.X.CompressGZIP(file_rpc_add_to_family_proto_rawDescData)
-	})
-	return file_rpc_add_to_family_proto_rawDescData
-}
-
-var file_rpc_add_to_family_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
-var file_rpc_add_to_family_proto_goTypes = []any{
-	(*AddToFamilyRequest)(nil),  // 0: pb.AddToFamilyRequest
-	(*AddToFamilyResponse)(nil), // 1: pb.AddToFamilyResponse
-	(*User)(nil),                // 2: pb.User
-	(*Permissions)(nil),         // 3: pb.Permissions
-}
-var file_rpc_add_to_family_proto_depIdxs = []int32{
-	2, // 0: pb.AddToFamilyResponse.user:type_name -> pb.User
-	3, // 1: pb.AddToFamilyResponse.permissions:type_name -> pb.Permissions
-	2, // [2:2] is the sub-list for method output_type
-	2, // [2:2] is the sub-list for method input_type
-	2, // [2:2] is the sub-list for extension type_name
-	2, // [2:2] is the sub-list for extension extendee
-	0, // [0:2] is the sub-list for field type_name
-}
-
-func init() { file_rpc_add_to_family_proto_init() }
-func file_rpc_add_to_family_proto_init() {
-	if File_rpc_add_to_family_proto != nil {
-		return
-	}
-	file_user_proto_init()
-	file_permissions_proto_init()
-	if !protoimpl.UnsafeEnabled {
-		file_rpc_add_to_family_proto_msgTypes[0].Exporter = func(v any, i int) any {
-			switch v := v.(*AddToFamilyRequest); i {
-			case 0:
-				return &v.state
-			case 1:
-				return &v.sizeCache
-			case 2:
-				return &v.unknownFields
-			default:
-				return nil
-			}
-		}
-		file_rpc_add_to_family_proto_msgTypes[1].Exporter = func(v any, i int) any {
-			switch v := v.(*AddToFamilyResponse); i {
-			case 0:
-				return &v.state
-			case 1:
-				return &v.sizeCache
-			case 2:
-				return &v.unknownFields
-			default:
-				return nil
-			}
-		}
-	}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_rpc_add_to_family_proto_rawDesc,
-			NumEnums:      0,
-			NumMessages:   2,
-			NumExtensions: 0,
-			NumServices:   0,
-		},
-		GoTypes:           file_rpc_add_to_family_proto_goTypes,
-		DependencyIndexes: file_rpc_add_to_family_proto_depIdxs,
-		MessageInfos:      file_rpc_add_to_family_proto_msgTypes,
-	}.Build()
-	File_rpc_add_to_family_proto = out.File
-	file_rpc_add_to_family_proto_rawDesc = nil
-	file_rpc_add_to_family_proto_goTypes = nil
-	file_rpc_add_to_family_proto_depIdxs = nil
-}
